# openmask3d

./: LICENSE  README.md  install_requirements.sh  pyproject.toml  run_openmask3d_scannet200_eval.sh  run_openmask3d_single_scene.sh
openmask3d/: compute_features_scannet200.py  compute_features_single_scene.py  compute_masks_full_scannet200.sh  compute_masks_single_scene.sh  utils.py
openmask3d/class_agnostic_mask_computation/: get_masks_scannet200.py  get_masks_single_scene.py
openmask3d/class_agnostic_mask_computation/benchmark/: evaluate_semantic_instance.py
openmask3d/class_agnostic_mask_computation/conf/: config_base_class_agn_masks_scannet200.yaml  config_base_class_agn_masks_single_scene.yaml  config_base_instance_segmentation.yaml
openmask3d/class_agnostic_mask_computation/conf/data/: indoor.yaml
openmask3d/class_agnostic_mask_computation/conf/logging/: full.yaml
openmask3d/class_agnostic_mask_computation/datasets/: semseg.py  utils.py
openmask3d/class_agnostic_mask_computation/datasets/preprocessing/: scannet_preprocessing.py
openmask3d/class_agnostic_mask_computation/trainer/: trainer.py
openmask3d/class_agnostic_mask_computation/utils/: utils.py
openmask3d/configs/: openmask3d_inference.yaml  openmask3d_scannet200_eval.yaml
openmask3d/data/: load.py
openmask3d/evaluation/: eval_semantic_instance.py  run_eval_close_vocab_inst_seg.py  scannet_constants.py  util_3d.py  val_scenes_scannet200.txt
openmask3d/mask_features_computation/: features_extractor.py  utils.py
openmask3d/visualization/: constants.py  viz_sim_score_export.py
(+5 files in other folders)
